Sat Jun 16 17:03:57 BST 2007  Olly Betts <olly@survex.com>

	* docs/doxygen_api_conf.in,docs/doxygen_full_conf.in: Update for
	  doxygen 1.5.2 (using "doxygen -u").

Sat Jun 16 10:17:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/Makefile.am: The "check-none" target should run all the
	  tests which don't need a database, not just those in apitest: add
	  internaltest, stemtest, queryparsertest and termgentest to the
	  list of tests it runs.

Sat Jun 16 09:36:10 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* Makefile.am,bin/Makefile.mk,examples/Makefile.mk: Work around an
	  apparent bug in automake which causes the entries in .libs
	  subdirectories generated for targets of bin_PROGRAMS not to be
	  removed on make clean.  (This was causing make distcheck to
	  fail.)

Sat Jun 16 04:42:16 BST 2007  Olly Betts <olly@survex.com>

	* HACKING,Makefile.am,tests/Makefile.am,tests/apitest.cc,
	  tests/harness/backendmanager.cc,tests/harness/backendmanager.h: In
	  the testsuite, rename the "void" pseudo-backend to "none" to more
	  clearly reflect what it is.  And rename the "remote" backend to
	  "remoteprog", to better differentiate it from "remotetcp".
	* HACKING: Fix error - "apitest -b=flint" doesn't work - it must be
	  "apitest -bflint".

Sat Jun 16 04:40:28 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Now using doxygen 1.5.2.

Sat Jun 16 02:08:20 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc: Fix to build with older zlib.  Not
	  hugely important as zlib security fixes mean any well maintained
	  box will be running a recent zlib, but the fix is trivial.

Fri Jun 15 19:39:03 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* HACKING: Document the new check-void, check-inmemory,
	  check-remoteprog and check-remotetcp targets.

Fri Jun 15 19:34:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* Makefile.am,tests/Makefile.am: Add check-void, check-inmemory,