@@ -1,3 +1,10 @@
+Sat Jun 16 22:19:11 BST 2007  Olly Betts <olly@survex.com>
+
+	* bin/Makefile.mk,bin/xapian-inspect.cc,xapian-core.spec.in:
+	  New utility 'xapian-inspect' allowing interactive inspection of
+	  key/tag pairs in a flint Btree.  Useful for developement and
+	  debugging, and an approximate replacement for quartzdump.
+
 Sat Jun 16 17:03:57 BST 2007  Olly Betts <olly@survex.com>
 
 	* docs/doxygen_api_conf.in,docs/doxygen_full_conf.in: Update for
